Updates from Overleaf

--- a/sections/12_paper_2.tex
+++ b/sections/12_paper_2.tex
@@ -83,7 +83,7 @@ Figure \ref{fig:global_shap} shows the relationship between patient characterist
 \begin{figure}
     \centering
     \includegraphics[width=1\linewidth]{images/p2_patient_shap.jpg}
-    \caption{Box plots showing the relationship between SHAP values and feature values. Box plots show inter-quartile range (box), median (mid-line in box), and range (whiskers). The plots are ordered in ranked feature importance (using the mean absolute SHAP value across all instances)}
+    \caption{Box plots showing the relationship between SHAP values and feature values. Box plots show inter-quartile range (box), median (mid-line in box), and range (whiskers). The plots are ordered in ranked feature importance (using the mean absolute SHAP value across all instances).}
     \label{fig:global_shap}
 \end{figure}
 
