--- a/sections/14_paper_4.tex
+++ b/sections/14_paper_4.tex
@@ -90,7 +90,7 @@ The XGBoost \textit{thrombolysis decision} model had an accuracy of 78.7\% and R
 \begin{figure}
     \centering
     {\includegraphics[width=0.65\linewidth]{./images/p4_spec_sens}} 
-    \caption{\textit{Sensitivity} (proportion of patients who were predicted to benefit from thrombolysis who were predicted to receive thrombolysis) and \textit{specificity} (proportion of patients who were predicted \textit{not} to benefit from thrombolysis who were predicted \textit{not} to receive thrombolysis) for each stroke team. The dotted line shows the hospitals on the pareto front where there are no hospitals that have a better \textit{sensitivity} without a worse \textit{specificity}, or vice-versa.}
+    \caption{\textit{Sensitivity} (proportion of patients who were predicted to benefit from thrombolysis who were predicted to receive thrombolysis) and \textit{specificity} (proportion of patients who were predicted \textit{not} to benefit from thrombolysis who were predicted \textit{not} to receive thrombolysis) for each stroke team. The dotted line shows the hospitals on the Pareto front where there are no hospitals that have a better \textit{sensitivity} without a worse \textit{specificity}, or vice-versa.}
     \label{fig:hosp_shap_scatter}
 \end{figure}
 
